# algodisco

./: .gitignore  README.md  pyproject.toml
algodisco/: __init__.py
algodisco/base/: algo.py  evaluator.py  llm.py  logger.py  search_method.py
algodisco/common/: logging_utils.py
algodisco/toolkit/: decorators.py
configs/: algobleu_search.yaml  behavesim_search.yaml  eoh.yaml  funsearch.yaml  one_plus_one_eps.yaml  openevolve.yaml  randsample.yaml
docs_ch/: index.md
docs_ch/api/: search-methods.md
docs_ch/developer-guide/: contribute.md
docs_ch/examples/: openevolve-example.md
docs_ch/getting-started/: configuration.md  installation.md  quickstart.md
docs_ch/user-guide/: architecture.md  evaluator.md  logging.md  overview.md  sandbox.md
docs_en/: index.md
docs_en/api/: base-classes.md  search-methods.md
docs_en/developer-guide/: contribute.md  custom-evaluator.md  custom-llm.md  custom-search.md
docs_en/examples/: funsearch-example.md
docs_en/getting-started/: configuration.md  installation.md  quickstart.md
docs_en/user-guide/: architecture.md  logging.md  sandbox.md
examples/: run_max_value.py  run_online_bin_packing.sh
examples/online_bin_packing/: dataset.py  evaluator.py  run_funsearch.py  task_description.txt  template_algo.txt
task_examples/: README.md
task_examples/admissible_set/: evaluator.py  task_definition.py  task_description.txt  template_algo.txt
task_examples/car_racing/: dataset.py  evaluator.py  task_definition.py  task_description.txt  template_algo.txt
task_examples/circle_packing/: evaluator.py  task_definition.py  (+2 more)
tests/: test_program_parser.py  test_program_parser_utils.py
tutorial/: 01_algo_proto_tutorial.ipynb  02_evaluator_tutorial.ipynb  03_sandbox_tutorial.ipynb  04_parser_tutorial.ipynb  05_llm_provider_tutorial.ipynb  06_complete_example_tutorial.ipynb  07_python_run_tutorial.ipynb  OUTLINE.md  README.md
(+113 files in other folders)
